Formating project